# styx-emulator

./: .gitignore  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  README.md  justfile  rust-toolchain.toml
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: cargo-ci.yml  cargo-udeps.yml
.helix/: languages.toml
data/gdb-xml/: hexagon-core.xml
docs/source/: adrs.rst  index.rst
docs/source/adrs/: 2-memory-write-hooks-cannot-modify-the-written-bytes.rst
docs/source/user/: timers.rst
docs/source/workflows/: debuggable.rst
examples/kinetis21-interrupt-angr/: Cargo.toml
examples/ppc405-freertos-demo/src/: main.rs
examples/raw-processor/src/: main.rs
extensions/styx-ptrace/: Cargo.toml
incubation/roadmap/: trace-debug-tools.md
incubation/styx-be-arm-processor/src/: main.rs
incubation/styx-cow/: Cargo.toml
incubation/styx-uconf/src/: core_components.rs  lib.rs
styx/bindings/styx-c-api/: README.md
styx/bindings/styx-py-api/: pyproject.toml
styx/core/: Cargo.toml
styx/core/src/: lib.rs
styx/core/styx-cpu/: Cargo.toml
styx/core/styx-cpu-pcode-backend/: Cargo.toml
styx/core/styx-cpu-type/: Cargo.toml
styx/core/styx-macros/: Cargo.toml
styx/core/styx-macros/src/: lib.rs  processor_config.rs  styx_manifest.rs
styx/core/styx-processor/: Cargo.toml
styx/db/dbutil/: Cargo.toml
styx/devices/src/: eeprom.rs
styx/integration-tests/src/: gdb_core_integration_test_suite.rs  gdb_harness.rs  runner.rs
styx/integration-tests/tests/: step_irqs.rs
styx/processors/: Cargo.toml
styx/processors/hexagon/styx-hexagon-processor/: Cargo.toml
styx/processors/hexagon/styx-hexagon-processor/src/: angel.rs  event_controller.rs  lib.rs  tlb.rs
styx/workspace-hack/: Cargo.toml
util/docker/: powerpc.Dockerfile
(+136 files in other folders)
