[package]
name = "styx-macros"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
toml_edit = { workspace = true }
styx-workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
test-case = { workspace = true }
gdbstub = { workspace = true }      # for doctests
gdbstub_arch = { workspace = true } # for doctests
log = { workspace = true }          # for doctests
tempfile = { workspace = true }
temp-env = { workspace = true }

[package.metadata.cargo-udeps.ignore]
development = ["gdbstub", "gdbstub_arch", "log"]
